--- a/index.html
+++ b/index.html
@@ -185,15 +185,19 @@
 
                 <div class="min-w-[240px]">
                   <div class="progress-wrap">
-                    <div id="prog-fill" class="progress-fill"></div>
-                    <div id="pencil" class="pencil">
-                      <svg viewBox="0 0 64 64" width="32" height="32" aria-hidden="true">
-                        <path d="M8 56l8-2 30-30-6-6-30 30-2 8z" fill="#ffbf47" />
-                        <path d="M50 12l6 6-6 6-6-6 6-6z" fill="#0ea5e9" />
-                        <path d="M16 54l6-2-4-4-2 6z" fill="#eab308" />
-                      </svg>
-                    </div>
-                  </div>
+  <div class="progress-fill" id="progress-fill"></div>
+  <div class="pencil" id="progress-pencil" aria-hidden="true">
+    <svg viewBox="0 0 64 64">
+      <!-- Simple cute pencil -->
+      <polygon points="4,60 8,44 20,56" fill="#fbbf24"></polygon>
+      <rect x="8" y="8" width="32" height="40" rx="4" ry="4"></rect>
+      <rect x="8" y="8" width="32" height="10" fill="#f97316"></rect>
+      <polygon points="40,28 56,32 40,36" fill="#facc15"></polygon>
+      <polygon points="56,32 60,36 56,40" fill="#111827"></polygon>
+    </svg>
+  </div>
+</div>
+
                   <div id="loading-text" class="text-xs text-slate-600 mt-1">
                     Ready. Type a topic and hit Create.
                   </div>
