Add CRex layout options to index.html

--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
                       <option value="frayer">Frayer (IFD)</option>
                       <option value="frayerClassic">Frayer — Classic</option>
                       <option value="mathex">MathEx — Worked Example</option>
+                  <!-- 🔹 CRex layouts -->
+  <option value="crex-short">CRex – Short Constructed Response</option>
+  <option value="crex-extended">CRex – Extended Constructed Response</option>
+
                     </optgroup>
                     <optgroup label="Simple layouts (no AI)">
                       <option value="simple-title-body">Simple — Title &amp; Body</option>
