--- a/index.html
+++ b/index.html
@@ -2,102 +2,149 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Chartie™ — Think · Ink · Chart · BOOM!</title>
+  <title>Chartie™ — Think. Ink. Chart. BOOM!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Tailwind -->
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&family=Nunito+Sans:wght@400;700&family=DM+Serif+Display&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&family=DM+Serif+Display:ital@0;1&display=swap"
+    rel="stylesheet">
 
+  <!-- Chartie Shared Styles -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="bg-slate-100 text-slate-900">
+<body class="bg-slate-50 text-slate-900 font-[Poppins]">
 
-<!-- HEADER -->
-<header class="bg-white/90 backdrop-blur border-b border-slate-200">
-  <div class="max-w-7xl mx-auto px-6 py-3 flex items-center justify-between">
-    <div class="flex items-center gap-2">
-      <div class="h-9 w-9 rounded-xl bg-amber-400 flex items-center justify-center font-bold">C</div>
+  <!-- NAVBAR -->
+  <header class="bg-white/90 backdrop-blur border-b border-slate-200 sticky top-0 z-20">
+    <div class="max-w-7xl mx-auto px-6 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-2">
+        <div class="h-10 w-10 rounded-xl bg-teal-400 flex items-center justify-center font-bold text-slate-900 shadow">
+          C
+        </div>
+        <div>
+          <div class="font-semibold tracking-tight text-slate-900">Chartie™</div>
+          <div class="text-xs text-slate-500">Think · Ink · Chart. BOOM!</div>
+        </div>
+      </div>
+
+      <nav class="hidden sm:flex items-center gap-6 text-sm">
+        <a href="builder.html" class="text-slate-600 hover:text-teal-600 font-medium">
+          Open Builder
+        </a>
+        <span class="px-3 py-1 text-xs rounded-full bg-teal-50 text-teal-700 border border-teal-200">
+          Beta · Teacher-tested
+        </span>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="bg-gradient-to-b from-white to-slate-50 py-16">
+    <div class="max-w-7xl mx-auto px-6 grid lg:grid-cols-2 gap-12 items-center">
+
+      <!-- TEXT -->
       <div>
-        <div class="font-semibold">Chartie™</div>
-        <div class="text-xs text-slate-500">Think · Ink · Chart · BOOM!</div>
+        <h1 class="text-4xl sm:text-5xl font-semibold leading-tight mb-6">
+          Think. Ink. Chart. <span class="text-teal-500">BOOM!</span><br />
+          <span class="text-slate-800">Your anchor charts, leveled up.</span>
+        </h1>
+
+        <p class="text-slate-600 text-lg max-w-xl mb-8">
+          Chartie turns your ideas into clean, printable anchor charts — fast.
+          Pick a layout, type a topic, and watch the magic happen.
+          Built for teachers who want pretty <strong>AND</strong> practical.
+        </p>
+
+        <a
+          href="builder.html"
+          class="inline-flex items-center gap-2 bg-teal-500 hover:bg-teal-400 text-white font-semibold px-6 py-3 rounded-xl shadow-md transition">
+          Open Chart Builder
+          <span aria-hidden="true">↗️</span>
+        </a>
+      </div>
+
+      <!-- HERO PREVIEW (BEFORE vs AFTER) -->
+      <div class="relative">
+        <div class="bg-white border border-slate-200 rounded-xl shadow-md p-4">
+          <p class="text-xs font-bold uppercase text-slate-500 mb-1">Before</p>
+          <img
+            src="https://i.ibb.co/3cPHV50/messy-anchor-example.png"
+            alt="Before example"
+            class="rounded-lg border mb-6" />
+
+          <p class="text-xs font-bold uppercase text-slate-500 mb-1">After (Chartie)</p>
+
+          <div class="paper rounded-xl border border-slate-300 shadow p-4">
+            <div class="anchor-sheet bg-lined-light rounded-xl">
+              <div class="pt-5 pb-6 pr-6 pl-16">
+                <h2 class="marker-title text-2xl mb-2">Two-Step Equations</h2>
+
+                <div class="card mb-3">
+                  <h3 class="marker-h">Step-by-Step</h3>
+                  <ul class="pretty-list list-disc pl-6">
+                    <li>Undo addition/subtraction first</li>
+                    <li>Then undo multiplication/division</li>
+                    <li>Keep both sides balanced</li>
+                  </ul>
+                </div>
+
+                <div class="card">
+                  <h3 class="marker-h">Quick Example</h3>
+                  <div class="mathface space-y-1">
+                    <div>3x + 5 = 17</div>
+                    <div>3x = 12</div>
+                    <div>x = 4 ✔️</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FEATURE STRIP -->
+  <section class="py-16 bg-white border-t border-slate-200">
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-10 text-center">
+
+      <div>
+        <div class="text-teal-500 text-3xl mb-3">⚡</div>
+        <h3 class="font-semibold text-lg mb-1">Fast, clean charts</h3>
+        <p class="text-slate-600 text-sm">No templates, no clutter — just type a topic.</p>
+      </div>
+
+      <div>
+        <div class="text-teal-500 text-3xl mb-3">🧠</div>
+        <h3 class="font-semibold text-lg mb-1">AI or manual layouts</h3>
+        <p class="text-slate-600 text-sm">Standard, Comparison, Cause/Effect, MathEx, CRex & more.</p>
+      </div>
+
+      <div>
+        <div class="text-teal-500 text-3xl mb-3">📥</div>
+        <h3 class="font-semibold text-lg mb-1">Export ready</h3>
+        <p class="text-slate-600 text-sm">Download as PNG or PDF — perfect for bulletin boards.</p>
       </div>
     </div>
-    <span class="text-xs rounded-full bg-emerald-50 px-3 py-1 font-semibold">Beta</span>
-  </div>
-</header>
+  </section>
 
-<main>
-
-<!-- MARKETING HERO -->
-<section class="hero bg-slate-900 text-slate-50">
-  <div class="max-w-7xl mx-auto px-6 grid gap-10 lg:grid-cols-2 items-center">
-    <div>
-      <h1 class="text-4xl font-semibold leading-tight mb-4">
-        Think. Ink. <span class="hl">Chart.</span> BOOM!
-      </h1>
-      <p class="text-slate-300 max-w-xl mb-6">
-        Type a topic. Get clean, printable anchor charts in seconds.
-      </p>
-
-      <button
-        id="open-builder"
-        class="inline-flex gap-2 bg-amber-400 text-slate-900 px-4 py-2 rounded-xl font-semibold shadow hover:bg-amber-300">
-        Open Chart Builder ↘️
-      </button>
+  <!-- FOOTER -->
+  <footer class="border-t border-slate-200 py-5 bg-slate-50">
+    <div class="max-w-7xl mx-auto px-6 text-xs text-slate-500 flex justify-between items-center">
+      <span>© Chartie™ · Built for teachers who do the good work.</span>
+      <span>Think · Ink · Chart. BOOM!</span>
     </div>
-  </div>
-</section>
+  </footer>
 
-<!-- BUILDER -->
-<section id="builder" class="max-w-7xl mx-auto px-6 py-10">
-  <div class="paper p-5 space-y-6">
-
-    <div class="grid md:grid-cols-[1fr_auto] gap-4 items-end">
-      <input
-        id="topic"
-        class="border rounded-lg px-3 py-2"
-        placeholder="Type a topic…" />
-
-      <button
-        id="btn-generate"
-        class="bg-indigo-600 text-white px-4 py-2 rounded-xl font-semibold">
-        Create Chart
-      </button>
-    </div>
-
-    <!-- Progress -->
-    <div class="progress-wrap">
-      <div id="progress-fill" class="progress-fill"></div>
-      <div id="progress-pencil" class="pencil">
-        <svg viewBox="0 0 64 64">
-          <rect x="8" y="8" width="32" height="40" rx="4" />
-          <polygon points="40,28 56,32 40,36" />
-        </svg>
-      </div>
-    </div>
-
-    <!-- OUTPUT -->
-    <section id="sheet" class="anchor-sheet bg-lined-light">
-      <h2 id="chart-title" class="marker-title pl-16 text-2xl">
-        Your Chart
-      </h2>
-      <div id="chart-content" class="grid gap-3 pl-16 pr-6 pb-6"></div>
-    </section>
-
-  </div>
-</section>
-
-</main>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="app.js"></script>
 </body>
 </html>
+
